# Bot-Dumps

./: Makefile  README.md  dockercompose-example.yml  echo_bot.py  fox_pics_bot.py  guess_game_bot.py  here_be_bot.py  inline_keyboard_bot.py  keyboard_bot.py  logging_exmpl.py  long_polling_test.py  main.py  main_exmpl.py  menu_button.py  pyproject.toml  simplest_inline_bot.py
bot_template/: .env_example  main.py  pyproject.toml
bot_template/keyboards/: set_menu.py
elder_echo_bot/: main.py
elder_echo_bot/config_data/: config.py
elder_echo_bot/handlers/: misc_handlers.py  user_handlers.py
elder_echo_bot/lexicon/: lexicon.py
