[project]
name = "bot-testing"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]